DigicielFull/force-app/main/default/objects/DealHub__Dealhub_Query__c/DealHub__Dealhub_Query__c.object-meta.xml
<CustomObject>
    <description>Dealhub Query Object</description>
    <label>DealHub Query</label>
    <nameField>
        <label>Dealhub Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealHub Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>