DigicielFull/force-app/main/default/objects/DealHub__Dealhub_Query__c/fields/DealHub__Action__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Action__c</fullName>
    <description>Action</description>
    <inlineHelpText>Action</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>