DigicielFull/force-app/main/default/objects/DealHub__Dealhub_Query__c/fields/DealHub__Object__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Object__c</fullName>
    <description>Object</description>
    <inlineHelpText>Object</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>