DigicielFull/force-app/main/default/objects/DealHub__Dealhub_Query__c/fields/DealHub__Query__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Query__c</fullName>
    <description>Dealhub Query</description>
    <inlineHelpText>Dealhub Query</inlineHelpText>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>