DigicielFull/force-app/main/default/objects/DealHub__Dealhub_Query__c/listViews/DealHub__All1.listView-meta.xml
<ListView>
    <fullName>DealHub__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>